fix: improve IR air conditioner control with proper state management
- Fix IR AC control errors by implementing safe command mapping
- Add global state management for AC mode and temperature display
- Implement proper state preservation for IR devices
- Add visual feedback for IR device limitations (orange buttons)
- Skip automatic status updates for IR devices to preserve user settings
- Add comprehensive documentation for IR device limitations
- Update PROGRESS_LOG.md and README.md with technical details

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,5 +1,11 @@
-# WebSocket connection URL
-VITE_WEBSOCKET_URL=http://localhost:3001
+# SwitchBot API Configuration
+SWITCHBOT_TOKEN=your_switchbot_token_here
+SWITCHBOT_SECRET=your_switchbot_secret_here
 
-# API base URL
-VITE_API_BASE_URL=http://localhost:3001/api
+# Server Configuration
+PORT=3001
+NODE_ENV=development
+FRONTEND_URL=http://localhost:3000
+
+# Data Update Configuration
+DEFAULT_UPDATE_INTERVAL=30
